Fix #363 fractions in exponents too low in IE8-11, Opera
https://github.com/mathquill/mathquill/issues/363#issuecomment-68667765

--- a/src/css/math.less
+++ b/src/css/math.less
@@ -122,7 +122,7 @@
 
       .mq-sup {
         display: inline-block;
-        vertical-align: bottom;
+        vertical-align: text-bottom;
       }
     }
 
